Restrict 'disable_post_sub_buffers_for_onscreen_surfaces' workaround to glx/gl

Currently it is applied for all Mesa drivers. Since the problem comes
from glXCopySubBufferMESA we do not need the workaround with egl/gles.

BUG=619514

R=piman@chromium.org
CQ_INCLUDE_TRYBOTS=tryserver.chromium.linux:linux_optional_gpu_tests_rel;tryserver.chromium.mac:mac_optional_gpu_tests_rel;tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2062763002
Cr-Commit-Position: refs/heads/master@{#400276}